--- a/style.scss
+++ b/style.scss
@@ -99,9 +99,8 @@ body {
 			display: flex;
 			flex-direction: column;
 			position: relative;
-			flex-basis: 400px;
-			min-width: 370px;
-			height: 250px;
+			flex-basis: 300px;
+			height: 400px;
 			padding: 40px;
 			background-color: var(--primary-color);
 			color: var(--secondary-color);
@@ -116,24 +115,24 @@ body {
 			
 			div.type {
 				margin-top: 10px;
+				font-size: 18px;
 
-				p {
-					line-height: 24px;
+				p.text {
+					font-weight: 700;
 				}
 				
 				p.title {
 					font-weight: 400;
-					font-size: 18px;
 				}
 			}
-		
-
+			
+			
 			button {
 				position: absolute;
-				width: 200px;
+				width: 160px;
 				height: 50px;
-				right: -10px;
-				bottom: -10px;
+				left: 70px;
+				bottom: -25px;
 				background-color: var(--primary-color);
 				color: var(--secondary-color);
 				border: 2px solid var(--secondary-color);
